public_html/index.css
.top {
	position: fixed;
    top: 0;
    width: 100%;
    min-width: 750px;
    height: 75px;
    line-height: 0px;
    z-index: 10;
    border-top: 2.5px solid #000000;
    border-bottom: 2.5px solid #000000;
    background-color: #003166;
    display: table;
}

.top span {
    display: table-cell;
}

.top span img {
	height: 70px;
	width: 70px;
	border-radius: 50%;
	float: left;
	margin: 2.5px 10px 2.5px 20px;
}

.top h1 {
	vertical-align: middle;
    display: table-cell;
	color: #ffffff;
	float: left;
	margin: 0px;
	height: 75px;
	position: relative;
	top: 37.5px;
	margin: 0px 20px 0px 0px;
	font-family: sans-serif;
	font-size: 48;
}

.top ul {
	vertical-align: middle;
    display: table-cell;
    float: right;
    margin: 0px;
    padding-right: 20px;
    padding-left: 0;
}

.top ul li {
	display: inline-block;
}

.top ul li a {
	vertical-align: middle;
	display: table-cell;
	height: 73px;
	min-width: 85px;
	color: #ffffff;
	text-align: center;
	text-decoration: none;
	font-family: sans-serif;
	font-size: 18px;
	border-width: 1px;
	border-spacing: 0px;
	border-color: #003166;
}

.top ul li:first-child {
	background-color: #003e80;
	border-color: #003e80;
}

.top ul li a:hover {
	background-color: #004a99;
	border-style: outset;
	text-decoration: underline;
}

.top ul li a:active {
	background-color: #003e80;
	text-decoration: underline;
	border-style: inset;
}

div.about {
	margin: 100px auto 0px auto;
	max-width: 750px;
	background-color: white;
	box-shadow: 10px 10px 5px #000000;
}

.side_spacing {
	padding-left: 15px;
	padding-right: 15px;
}

body {
	background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/fuji_background.jpg) no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	margin: 0px;
}

.bottom {
	position: fixed;
	bottom: 0px;
	width: 100%;
	border-top: 2.5px solid #000000;
    border-bottom: 2.5px solid #000000;
    background-color: #003166;
    color: #ffffff;
}

.bottom p {
	float: right;
	padding-right: 20px;
}

.bottom a {
	color: #ffffff;
}

